@@ -31,6 +31,9 @@ Scalar::Util              = 0
 autodie                   = 0
 version                   = 0.77 ; new API
 
+[Prereqs / RuntimeRecommends]
+Git::Wrapper              = 0
+
 [Prereqs / TestRequires]
 Test::More                = 0.88 ; done_testing
 File::pushd               = 0
