@@ -29,8 +29,9 @@ In your F<dist.ini>:
 =head1 DEPENDENCIES
 
 GitVersionCheckCJM requires {{$t->dependency_link('Dist::Zilla')}}.
-It also requires L<Git>, which is not on CPAN, but is distributed as
-part of C<git>.
+It also requires {{$t->dependency_link('Git::Wrapper')}}, although it
+is only listed as a recommended dependency for the distribution (to
+allow people who don't use Git to use the other plugins.)
 
 =cut
 
@@ -53,7 +54,21 @@ listed any number of times.
 
 =cut
 
-use Git ();
+use Git::Wrapper ();
+
+#---------------------------------------------------------------------
+# Helper sub to run a git command and split on NULs:
+
+sub _git0
+{
+  my ($git, $command, @args) = @_;
+
+  my ($result) = do { local $/; $git->$command(@args) };
+
+  return unless defined $result;
+
+  split(/\0/, $result);
+} # end _git0
 
 #---------------------------------------------------------------------
 # Main entry point:
@@ -62,16 +77,16 @@ sub munge_files {
   my ($self) = @_;
 
   # Get the released versions:
-  my $git = Git->repository( $self->zilla->root );
+  my $git = Git::Wrapper->new( $self->zilla->root );
 
-  my %released = map { /^v?([\d._]+)$/ ? ($1, 1) : () } $git->command('tag');
+  my %released = map { /^v?([\d._]+)$/ ? ($1, 1) : () } $git->tag;
 
   # Get the list of modified but not-checked-in files:
   my %modified = map { $_ => 1 } (
     # Files that need to be committed:
-    split(/\0/, scalar $git->command(qw( diff-index -z HEAD --name-only ))),
+    _git0($git, qw( diff_index -z HEAD --name-only )),
     # Files that are not tracked by git yet:
-    split(/\0/, scalar $git->command(qw( ls-files -oz --exclude-standard ))),
+    _git0($git, qw( ls_files -oz --exclude-standard )),
   );
 
   # Get the list of modules:
@@ -133,12 +148,10 @@ sub munge_file
   }
 
   # See if we checked in the module without updating the version:
-  my $lastChangedRev = $git->command_oneline(
-    qw(rev-list -n1 HEAD --) => $pmFile
-  );
+  my ($lastChangedRev) = $git->rev_list(qw(-n1 HEAD --) => $pmFile);
 
-  my $inRelease = $git->command_oneline(
-    qw(name-rev --refs), "refs/tags/$version",
+  my ($inRelease) = $git->name_rev(
+    qw(--refs), "refs/tags/$version",
     $lastChangedRev
   );
 
